# fda-nutrition-env

./: .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
core/: episode_generator.py  grader.py  grader_v2.py
data/: _build_seed_products.py  regulatory_tables.py  seed_products.py
env/: __init__.py  client.py  models.py
env/server/: app.py  environment.py
server/: Dockerfile  __init__.py  app.py
static/: index.html
tests/: test_environment.py  test_grader.py  test_ground_truth.py  test_http_endpoints.py
